--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 weather.api.key = 47ce16aa3ddf58c647229c6a6c709f7a
+inspiring.api.host = inspiring-quotes.p.rapidapi.com
+inspiring.api.key = b91f9a6f51msh55f4c60fbd9ef3bp15d5ddjsnb52ef1e164ed
+book.api.host = hapi-books.p.rapidapi.com
+book.api.key = cc34d7d462mshd19c7e917b178c5p13fff7jsn4daba9959a8b
+covidnews.api.host = covid-news2.p.rapidapi.com
+covidnews.api.key =  b91f9a6f51msh55f4c60fbd9ef3bp15d5ddjsnb52ef1e164ed
